fix: Adjusts SonarQube issues and caching